# GLTests

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Format  LinuxBuild  LinuxBuild.sh  Make.sh  MakeDesktop.sh  Makefile  README.md  TermuxX11Build  TermuxX11Build.sh
.github/workflows/: android_build.yaml  build.yaml  build_android.yaml  build_desktop.yaml  main.yaml
.scripts/: Format.sh  ListFiles  ReplaceText  ReplaceText.sh
android/: build.gradle.kts  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
android/app/src/cpp/: BrutAndroidWindow.cpp  BrutAndroidWindow.hpp  main.cpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/c/: CMakeLists.txt  main.cpp
android/app/src/main/c/Assets/: BrutAndroidAssetsManager.cpp  BrutAndroidAssetsManager.hpp
android/app/src/main/c/Assets/jni/: brut_android_assets_manager_jni.c  brut_android_assets_manager_jni.h
android/app/src/main/java/dev/trindadedev/brut/: BrutActivity.java  BrutAssetsManager.java  BrutGamePadView.java
android/app/src/main/java/org/libsdl/app/: HIDDevice.java  HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java  SDLDummyEdit.java  SDLInputConnection.java  SDLSurface.java
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
assets/shaders/: index.txt
assets/shaders/android/defShader/: main.frag  main.vert
assets/shaders/android/freeTypeGL/: main.frag  main.vert
assets/shaders/desktop/defShader/: main.frag  main.vert
assets/shaders/desktop/freeTypeGL/: main.frag  main.vert
cmake/: CheckPackages.cmake  CoreDeps.cmake
core/: CMakeLists.txt
core/include/: BrutConfig.h  BrutConfig.hpp  BrutGame.hpp  BrutGameClock.hpp  BrutIWindow.hpp
core/include/Assets/: BrutIAssetsManager.hpp
core/include/Buffer/: BrutBuffer.hpp  BrutBuffer.tpp  BrutVertexArrayBuffer.hpp
core/include/Camera/: BrutCamera.hpp
core/include/Error/: BrutError.hpp
core/include/FreeTypeGL/: BrutFreeTypeGL.hpp
core/include/Graphics/: BrutColor.hpp
core/include/Graphics/Shader/: BrutShader.hpp  BrutShadersManager.hpp
core/include/Input/: BrutInputHandler.hpp
core/include/Objects/: BrutCube.hpp  BrutTerrain.hpp
core/include/Objects/Primitives/: BrutCube.hpp  BrutCubeCollection.hpp  BrutObject.hpp  BrutPyramid.hpp  BrutTerrain.hpp
core/include/Objects/Primitives/2D/: BrutSquare.hpp
core/include/Objects/Terrain/: BrutPlanTerrain.hpp  BrutTerrain.hpp
core/include/Perlin/: BrutPerlinNoise.hpp
core/include/Player/: BrutInventory.hpp  BrutInventoryItem.hpp  BrutPlayer.hpp
core/include/Terminal/: TermColor.h  TermColor.hpp
core/include/Window/: BrutIWindow.hpp  BrutSDLWindow.hpp  BrutWindowConfig.h
core/src/: BrutGame.cpp  BrutGameClock.cpp  BrutIWindow.cpp
core/src/Buffer/: BrutVertexArrayBuffer.cpp
core/src/Camera/: BrutCamera.cpp
core/src/Error/: BrutError.cpp
core/src/FreeTypeGL/: BrutFreeTypeGL.cpp
core/src/Graphics/: BrutColor.cpp
core/src/Graphics/Shader/: BrutShader.cpp  BrutShadersManager.cpp
core/src/Input/: BrutInputHandler.cpp
core/src/Objects/: BrutCube.cpp  BrutObject.cpp  BrutTerrain.cpp
core/src/Objects/Primitives/: BrutCube.cpp  BrutCubeCollection.cpp  BrutObject.cpp  BrutPyramid.cpp  BrutTerrain.cpp
core/src/Objects/Primitives/2D/: BrutSquare.cpp
core/src/Objects/Terrain/: BrutPlanTerrain.cpp  BrutTerrain.cpp
core/src/Perlin/: BrutPerlinNoise.cpp
core/src/Player/: BrutInventory.cpp  BrutInventoryItem.cpp  BrutPlayer.cpp
core/src/Window/: BrutIWindow.cpp  BrutSDLWindow.cpp
desktop/: CMakeLists.txt  brut_desktop
desktop/include/: BrutDesktopInputHandler.hpp  BrutDesktopWindow.hpp  BrutWindowConfig.hpp
desktop/include/Assets/: BrutDesktopAssetsManager.hpp
desktop/src/: BrutDesktopInputHandler.cpp  BrutDesktopWindow.cpp  main.cpp
desktop/src/Assets/: BrutDesktopAssetsManager.cpp
include/: BrutGame.hpp  BrutWindow.hpp  config.h  renderer.h
include/Buffer/: BrutBuffer.hpp  BrutBuffer.tpp  BrutVertexArrayBuffer.hpp
include/Error/: BrutError.hpp
include/Graphics/: BrutColor.hpp  BrutShader.hpp
include/Graphics/Shader/: BrutShader.hpp  BrutShadersManager.hpp
include/Objects/: BrutCube.hpp
include/cglm/: aabb2d.h  affine-mat.h  affine-post.h  affine-pre.h  affine.h  affine2d-post.h  affine2d.h  bezier.h  box.h  cam.h  cglm.h  color.h  ease.h  euler.h  frustum.h  io.h  ivec2.h  ivec3.h  ivec4.h  mat2.h  mat2x4.h  mat3.h  mat3x4.h  mat4.h  mat4x3.h  project.h  quat.h  ray.h  sphere.h  struct.h  util.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
include/cglm/call/: aabb2d.h  box.h  cam.h  curve.h  frustum.h  io.h  ivec3.h  ivec4.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x4.h  mat4.h  mat4x2.h  noise.h  plane.h  ray.h  sphere.h  vec2.h
include/cglm/clipspace/: ortho_lh_no.h  ortho_lh_zo.h  ortho_rh_no.h  ortho_rh_zo.h  persp.h  persp_lh_no.h  persp_lh_zo.h  persp_rh_no.h  persp_rh_zo.h  project_no.h  view_lh_no.h  view_rh.h  view_rh_no.h
include/cglm/handed/: euler_to_quat_lh.h
include/cglm/simd/: arm.h  intrin.h  wasm.h  x86.h
include/cglm/struct/: aabb2d.h  affine-post.h  affine.h  affine2d.h  box.h  cam.h  color.h  curve.h  euler.h  frustum.h  io.h  ivec2.h  ivec3.h  ivec4.h  mat2.h  mat2x3.h  mat3.h  mat4.h  mat4x2.h  noise.h  project.h  quat.h  ray.h  sphere.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
include/glad/: gl.h
include/graphics/: color.h  shader.h
include/io/: file.h  print.h
include/objects/: cube.h
include/term/: tcolor.h
shaders/cube/: cube.frag  cube.vert  main.vert
shaders/defShader/: main.vert
shaders/minorShader/: main.vert
src/: BrutGame.cpp  BrutWindow.cpp  main.c  main.cpp  renderer.c
src/Buffer/: BrutVertexArrayBuffer.cpp
src/Error/: BrutError.cpp
src/Graphics/: BrutColor.cpp  BrutShader.cpp
src/Graphics/Shader/: BrutShader.cpp
src/Objects/: BrutCube.cpp  BrutTerrain.cpp
src/glad/: gl.c
src/graphics/: color.c  shader.c
src/io/: file.c  print.c
src/objects/: cube.c
(+32 files in other folders)
